# ArchCode

./: .gitignore  README.md  pyproject.toml
.archcode/: config.yaml.example
archcode/: __init__.py  __main__.py  agent.py  app.py  client.py  config.py  conversation.py  driver.py  prompts.py  styles.tcss
archcode/agents/: __init__.py
archcode/commands/: __init__.py
archcode/context/: __init__.py
archcode/conversation/: manager.py  models.py
archcode/hooks/: __init__.py
archcode/llm/: client.py  events.py  serializer.py
archcode/mcp/: __init__.py
archcode/memory/: __init__.py
archcode/permissions/: __init__.py
archcode/prompts/: __init__.py  builder.py  system.py
archcode/skills/: __init__.py
archcode/teams/: __init__.py
archcode/tools/: __init__.py  base.py  bash.py  edit_file.py  glob.py  grep.py  read_file.py  registry.py  write_file.py
archcode/worktree/: __init__.py
tests/: test_agent.py  test_agent_tool_execution.py  test_config.py  test_integration.py  test_serializer.py  test_tools_base.py  test_tools_bash.py  test_tools_edit_file.py  test_tools_glob.py  test_tools_grep.py  test_tools_read_file.py  test_tools_registry.py  test_tools_write_file.py
